tests/ui/unboxed-closures/non-tupled-arg-mismatch.stderr
error[E0059]: type parameter to bare `Fn` trait must be a tuple
  --> $DIR/non-tupled-arg-mismatch.rs:3:9
   |
LL | fn a<F: Fn<usize>>(f: F) {}
   |         ^^^^^^^^^ the trait `Tuple` is not implemented for `usize`
   |
note: required by a bound in `Fn`
  --> $SRC_DIR/core/src/ops/function.rs:LL:COL

error: aborting due to previous error

For more information about this error, try `rustc --explain E0059`.
